P3/ejudge_contests/01/var/archive/xmlreports/0/0/0/000003
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="3" judge-id="4" status="CE" scoring="ACM" run-tests="0" contest-id="301" compile-error="yes" >
  <uuid>e46ebb9e-f07a-4949-84ae-647ab7e19307</uuid>
  <compiler_output>000003.cpp: In function 'int main()':
000003.cpp:20:14: error: 'j' was not declared in this scope
     table[i][j]='2';
              ^
000003.cpp:25:14: error: 'j' was not declared in this scope
     table[i][j]='-';
              ^
</compiler_output>
</testing-report>
